--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
+    "react-country-flag": "^1.1.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
     "react-player": "^1.13.0",
