--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "paypal-checkout": "^4.0.314",
     "react": "^16.11.0",
     "react-country-flag": "^1.1.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
-    "react-paypal-express-checkout": "^1.0.5",
     "react-player": "^1.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
